# mermaid-ascii

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yaml  release.yaml
conda/: env-ci-win.yaml  env.yaml
scripts/: binary.ps1  binary.py  binary.sh  get_version.py  versioning.sh
src/mermaid_ascii/: __init__.py
tests/: smoke_test.txt
